--- a/src/pages/Shared/Footer/footer.css
+++ b/src/pages/Shared/Footer/footer.css
@@ -5,7 +5,7 @@
     color: floralwhite;
     position: relative;
     padding-top: 20px;
-    margin-top: 5rem;
+    /* margin-top: 5rem; */
 }
 @media (max-width:700px) {
     
